--- a/project_part2/Dockerfile
+++ b/project_part2/Dockerfile
@@ -1,20 +1,19 @@
-# Use an official Python runtime as a parent image
-FROM python:3.8-slim
+FROM python:3.10-slim
 
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . /app
+# Copy the requirements.txt file into the container at /app
+COPY book_catalog/requirements.txt .
 
-# Install any needed packages specified in requirements.txt
+# Install any dependencies specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Make port 5000 available to the world outside this container
-EXPOSE 5000
+# Copy the current directory contents into the container at /app
+COPY book_catalog/ .
 
-# Define environment variable
-ENV NAME World
+# Make port 80 available to the world outside this container
+EXPOSE 80
 
-# Run app.py when the container launches
-CMD ["python", "app.py"]
+# Command to run the FastAPI app with Uvicorn
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
