--- a/project_part2/scripts/deployment.yml
+++ b/project_part2/scripts/deployment.yml
@@ -1,1 +1,40 @@
 # Write Kubernetes Deployment Script
+# Write Kubernetes Deployment Script
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: book-catalog
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: book-catalog
+  template:
+    metadata:
+      labels:
+        app: book-catalog
+    spec:
+      containers:
+      - name: book-catalog
+        image: book-catalog:latest
+        imagePullPolicy: IfNotPresent
+        env:
+        - name: DATABASE_URL
+          value: "postgresql://part_2_user:Cey0EQfq03ihyY6IdjF0n6aacsQCMhrc@dpg-cr8q9d5svqrc739ee440-a.oregon-postgres.render.com/part_2"
+        ports:
+        - containerPort: 80
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: book-catalog
+spec:
+  selector:
+    app: book-catalog
+  type: NodePort
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+      nodePort: 30000
